fix: change docker concurrency group to allow multiple deployments to different branches

--- a/.github/workflows/deployment-docker-image.yml
+++ b/.github/workflows/deployment-docker-image.yml
@@ -29,7 +29,8 @@ env:
   IMAGE_NAME: ${{ github.repository }}
   TURBO_TELEMETRY_DISABLED: 1
 
-concurrency: production
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref_name }}
 
 jobs:
   release:
