--- a/.github/workflows/deployment-docker-image.yml
+++ b/.github/workflows/deployment-docker-image.yml
@@ -57,6 +57,8 @@ jobs:
           app_id: ${{ secrets.RENOVATE_MERGE_APP_ID }}
       - uses: actions/checkout@v4
         if: env.SKIP_RELEASE == 'false'
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v4
         if: env.SKIP_RELEASE == 'false'
         with:
