fix(icons): local icon repository does not work with medias

--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./index.ts"
+    ".": "./index.ts",
+    "./local": "./src/local.ts"
   },
   "typesVersions": {
     "*": {
