--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -28,8 +28,7 @@
     "@homarr/log": "workspace:^0.1.0",
     "dayjs": "^1.11.13",
     "next": "^14.2.21",
-    "react": "^19.0.0",
-    "tldts": "^6.1.69"
+    "react": "^19.0.0"
   },
   "devDependencies": {
     "@homarr/eslint-config": "workspace:^0.2.0",
