--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -41,6 +41,7 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "dockerode": "^4.0.2",
+    "lodash.clonedeep": "^4.5.0",
     "next": "^14.2.22",
     "react": "^19.0.0",
     "superjson": "2.2.2",
