--- a/turbo.json
+++ b/turbo.json
@@ -37,6 +37,7 @@
     "DOCKER_PORTS",
     "NODE_ENV",
     "PORT",
+    "SECRET_ENCRYPTION_KEY",
     "SKIP_ENV_VALIDATION"
   ],
   "ui": "stream",
