--- a/turbo.json
+++ b/turbo.json
@@ -23,7 +23,6 @@
     "AUTH_OIDC_AUTO_LOGIN",
     "AUTH_LOGOUT_REDIRECT_URL",
     "AUTH_PROVIDERS",
-    "AUTH_SECRET",
     "AUTH_SESSION_EXPIRY_TIME",
     "CI",
     "DISABLE_REDIS_LOGS",
@@ -38,6 +37,7 @@
     "DOCKER_PORTS",
     "NODE_ENV",
     "PORT",
+    "SECRET_ENCRYPTION_KEY",
     "SKIP_ENV_VALIDATION"
   ],
   "ui": "stream",
